chemutils-main/chemutils/molecule/selection/generated/SelectionLanguageParser.py
# Generated from SelectionLanguage.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SelectionLanguageParser ( Parser ):

    grammarFileName = "SelectionLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'around'", "'within'", "'beyond'", "'same'", 
                     "'bonded'", "'of'", "'as'", "'to'", "'all'", "'none'", 
                     "'chain'", "'residue'", "'molecule'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'serial'", "'b_factor'", 
                     "'occ'", "'hetatm'", "'index'", "<INVALID>", "'name'", 
                     "'formal_charge'", "'charge'", "'hvy_degree'", "'degree'", 
                     "'valence'", "'hcount'", "'ring_size'", "'ring_system'", 
                     "'aromatic'", "'aliphatic'", "'halogen'", "'metal'", 
                     "'ring'", "'water'", "'backbone'", "'chiral'", "'alpha_carbon'", 
                     "'not'", "'or'", "'and'", "'xor'", "<INVALID>", "<INVALID>", 
                     "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "AROUND", "WITHIN", "BEYOND", "SAME", 
                      "BONDED", "OF", "AS", "TO", "ALL", "NONE", "CHAIN", 
                      "RESIDUE", "MOLECULE", "RESIDUE_NAME", "RESIDUE_NUMBER", 
                      "ALTERNATE_LOCATION", "ATOM_SERIAL", "B_FACTOR", "OCCUPANCY", 
                      "HETATM", "INDEX", "ELEMENT", "ATOM_NAME", "FORMAL_CHARGE", 
                      "CHARGE", "HEAVY_DEGREE", "DEGREE", "VALENCE", "HYDROGEN_COUNT", 
                      "RING_SIZE", "RING_SYSTEM", "AROMATIC", "ALIPHATIC", 
                      "HALOGEN", "METAL", "IN_RING", "WATER", "BACKBONE", 
                      "CHIRAL", "ALPHA_CARBON", "NOT", "OR", "AND", "XOR", 
                      "OPERATOR", "WS", "OPEN_PAREN", "CLOSE_PAREN", "FLOAT_RANGE", 
                      "INTEGER_RANGE", "FLOAT", "POSITIVE_FLOAT", "POSITIVE_INTEGER", 
                      "INTEGER", "NUMERIC_INDEX", "OPENEYE_ATOM_IDENTIFIER", 
                      "OPENEYE_BOND_IDENTIFIER", "IDENTIFIER", "STRING", 
                      "SMARTS" ]

    RULE_full_expr = 0
    RULE_parenthesized_expr = 1
    RULE_expr = 2
    RULE_simple_expr = 3
    RULE_all = 4
    RULE_none = 5
    RULE_pdb_expr = 6
    RULE_chain = 7
    RULE_residue_name = 8
    RULE_residue_number = 9
    RULE_alternate_location = 10
    RULE_atom_serial = 11
    RULE_b_factor = 12
    RULE_occupancy = 13
    RULE_hetatm = 14
    RULE_atom_property = 15
    RULE_property_expr = 16
    RULE_index = 17
    RULE_element = 18
    RULE_atom_name = 19
    RULE_formal_charge = 20
    RULE_degree = 21
    RULE_heavy_degree = 22
    RULE_valence = 23
    RULE_hydrogen_count = 24
    RULE_ring_size = 25
    RULE_molecule = 26
    RULE_membership_expr = 27
    RULE_aromatic = 28
    RULE_aliphatic = 29
    RULE_halogen = 30
    RULE_metal = 31
    RULE_in_ring = 32
    RULE_water = 33
    RULE_backbone = 34
    RULE_alpha_carbon = 35
    RULE_chiral = 36
    RULE_smarts_expr = 37
    RULE_smarts = 38
    RULE_openeye_atombondset_expr = 39
    RULE_openeye_atom_expr = 40
    RULE_openeye_bond_expr = 41
    RULE_string_selector = 42
    RULE_integer_selector = 43
    RULE_float_selector = 44
    RULE_integer_slices = 45
    RULE_integer_comparison = 46
    RULE_integer = 47
    RULE_integer_range = 48
    RULE_float_slices = 49
    RULE_float_comparison = 50
    RULE_float = 51
    RULE_float_range = 52

    ruleNames =  [ "full_expr", "parenthesized_expr", "expr", "simple_expr", 
                   "all", "none", "pdb_expr", "chain", "residue_name", "residue_number", 
                   "alternate_location", "atom_serial", "b_factor", "occupancy", 
                   "hetatm", "atom_property", "property_expr", "index", 
                   "element", "atom_name", "formal_charge", "degree", "heavy_degree", 
                   "valence", "hydrogen_count", "ring_size", "molecule", 
                   "membership_expr", "aromatic", "aliphatic", "halogen", 
                   "metal", "in_ring", "water", "backbone", "alpha_carbon", 
                   "chiral", "smarts_expr", "smarts", "openeye_atombondset_expr", 
                   "openeye_atom_expr", "openeye_bond_expr", "string_selector", 
                   "integer_selector", "float_selector", "integer_slices", 
                   "integer_comparison", "integer", "integer_range", "float_slices", 
                   "float_comparison", "float", "float_range" ]

    EOF = Token.EOF
    AROUND=1
    WITHIN=2
    BEYOND=3
    SAME=4
    BONDED=5
    OF=6
    AS=7
    TO=8
    ALL=9
    NONE=10
    CHAIN=11
    RESIDUE=12
    MOLECULE=13
    RESIDUE_NAME=14
    RESIDUE_NUMBER=15
    ALTERNATE_LOCATION=16
    ATOM_SERIAL=17
    B_FACTOR=18
    OCCUPANCY=19
    HETATM=20
    INDEX=21
    ELEMENT=22
    ATOM_NAME=23
    FORMAL_CHARGE=24
    CHARGE=25
    HEAVY_DEGREE=26
    DEGREE=27
    VALENCE=28
    HYDROGEN_COUNT=29
    RING_SIZE=30
    RING_SYSTEM=31
    AROMATIC=32
    ALIPHATIC=33
    HALOGEN=34
    METAL=35
    IN_RING=36
    WATER=37
    BACKBONE=38
    CHIRAL=39
    ALPHA_CARBON=40
    NOT=41
    OR=42
    AND=43
    XOR=44
    OPERATOR=45
    WS=46
    OPEN_PAREN=47
    CLOSE_PAREN=48
    FLOAT_RANGE=49
    INTEGER_RANGE=50
    FLOAT=51
    POSITIVE_FLOAT=52
    POSITIVE_INTEGER=53
    INTEGER=54
    NUMERIC_INDEX=55
    OPENEYE_ATOM_IDENTIFIER=56
    OPENEYE_BOND_IDENTIFIER=57
    IDENTIFIER=58
    STRING=59
    SMARTS=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Full_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,0)


        def EOF(self):
            return self.getToken(SelectionLanguageParser.EOF, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)

        def getRuleIndex(self):
            return SelectionLanguageParser.RULE_full_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFull_expr" ):
                listener.enterFull_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFull_expr" ):
                listener.exitFull_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFull_expr" ):
                return visitor.visitFull_expr(self)
            else:
                return visitor.visitChildren(self)




    def full_expr(self):

        localctx = SelectionLanguageParser.Full_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_full_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 106
                self.match(SelectionLanguageParser.WS)


            self.state = 109
            self.expr(0)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 110
                self.match(SelectionLanguageParser.WS)


            self.state = 113
            self.match(SelectionLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parenthesized_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self):
            return self.getToken(SelectionLanguageParser.OPEN_PAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SelectionLanguageParser.CLOSE_PAREN, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)

        def getRuleIndex(self):
            return SelectionLanguageParser.RULE_parenthesized_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesized_expr" ):
                listener.enterParenthesized_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesized_expr" ):
                listener.exitParenthesized_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesized_expr" ):
                return visitor.visitParenthesized_expr(self)
            else:
                return visitor.visitChildren(self)




    def parenthesized_expr(self):

        localctx = SelectionLanguageParser.Parenthesized_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_parenthesized_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(SelectionLanguageParser.OPEN_PAREN)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 116
                self.match(SelectionLanguageParser.WS)


            self.state = 119
            self.expr(0)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 120
                self.match(SelectionLanguageParser.WS)


            self.state = 123
            self.match(SelectionLanguageParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SelectionLanguageParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(SelectionLanguageParser.NOT, 0)
        def WS(self):
            return self.getToken(SelectionLanguageParser.WS, 0)
        def expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class SameContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SAME(self):
            return self.getToken(SelectionLanguageParser.SAME, 0)
        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)
        def atom_property(self):
            return self.getTypedRuleContext(SelectionLanguageParser.Atom_propertyContext,0)

        def AS(self):
            return self.getToken(SelectionLanguageParser.AS, 0)
        def expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSame" ):
                listener.enterSame(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSame" ):
                listener.exitSame(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSame" ):
                return visitor.visitSame(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SelectionLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)
        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.OR)
            else:
                return self.getToken(SelectionLanguageParser.OR, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class WithinContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WITHIN(self):
            return self.getToken(SelectionLanguageParser.WITHIN, 0)
        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)
        def float_(self):
            return self.getTypedRuleContext(SelectionLanguageParser.FloatContext,0)

        def OF(self):
            return self.getToken(SelectionLanguageParser.OF, 0)
        def expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithin" ):
                listener.enterWithin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithin" ):
                listener.exitWithin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWithin" ):
                return visitor.visitWithin(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SelectionLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)
        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.AND)
            else:
                return self.getToken(SelectionLanguageParser.AND, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesizedContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def parenthesized_expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.Parenthesized_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesized" ):
                listener.enterParenthesized(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesized" ):
                listener.exitParenthesized(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesized" ):
                return visitor.visitParenthesized(self)
            else:
                return visitor.visitChildren(self)


    class QueryContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simple_expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.Simple_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)


    class XorContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SelectionLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)
        def XOR(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.XOR)
            else:
                return self.getToken(SelectionLanguageParser.XOR, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXor" ):
                listener.enterXor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXor" ):
                listener.exitXor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXor" ):
                return visitor.visitXor(self)
            else:
                return visitor.visitChildren(self)


    class Bonded_toContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BONDED(self):
            return self.getToken(SelectionLanguageParser.BONDED, 0)
        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)
        def TO(self):
            return self.getToken(SelectionLanguageParser.TO, 0)
        def expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBonded_to" ):
                listener.enterBonded_to(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBonded_to" ):
                listener.exitBonded_to(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBonded_to" ):
                return visitor.visitBonded_to(self)
            else:
                return visitor.visitChildren(self)


    class AroundContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def AROUND(self):
            return self.getToken(SelectionLanguageParser.AROUND, 0)
        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)
        def float_(self):
            return self.getTypedRuleContext(SelectionLanguageParser.FloatContext,0)

        def OF(self):
            return self.getToken(SelectionLanguageParser.OF, 0)
        def expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAround" ):
                listener.enterAround(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAround" ):
                listener.exitAround(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAround" ):
                return visitor.visitAround(self)
            else:
                return visitor.visitChildren(self)


    class BeyondContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SelectionLanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BEYOND(self):
            return self.getToken(SelectionLanguageParser.BEYOND, 0)
        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SelectionLanguageParser.WS)
            else:
                return self.getToken(SelectionLanguageParser.WS, i)
        def float_(self):
            return self.getTypedRuleContext(SelectionLanguageParser.FloatContext,0)

        def OF(self):
            return self.getToken(SelectionLanguageParser.OF, 0)
        def expr(self):
            return self.getTypedRuleContext(SelectionLanguageParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeyond" ):
                listener.enterBeyond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeyond" ):
                listener.exitBeyond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeyond" ):
                return visitor.visitBeyond(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SelectionLanguageParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [47]:
                localctx = SelectionLanguageParser.ParenthesizedContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
